Fixed scrolling issue. Removed overflow

--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: hidden;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 .container{
